Unified ads-search argparse docs with sphinx docs.
Fixed bibm search usage's text to be consistent with docs.

*****

Bumped bibmanager version to 0.5.0.
This next merge closes #10

*****

Added bibcode to Bib() object.

*****

Updated Bib.published() to check with bibcode instead of adsurl.
Updated bm.merge() and bm.loadfile() to check duplicates by bibcode
instead of adsurl.

*****

Added script to prefer peer-reviewed over arxiv entries in
remove_duplicates() function.

*****

Changed indentation in bm.remove_duplicates() func to four spaces.

*****

Updated am.update() to look directly at bibcodes.
Updated bibcode extraction in Bib.__init__() to remove any backslash.
Added bibcode in cli_search() report.
Updated sphinx and argparse docs according to adsurl/bibcode changes.

*****

Updated bibmanager url in bm.export().

*****

Bumped bibmanager version to 0.5.1.
This next merge closes #17

*****

Added key and bibcode arguments to bm.search() function.

*****

Updated cli_search() function to incorporate new search fields to
command-line interface.
Updated search argparse and sphinx docs.

*****

Bumped bibmanager version to 0.5.2.
This next merge closes #19


*****  Tue Jan  8 09:34:46 CLT 2019  *****

Deleted cm.reset() function.
Added default-config copy in bm.init().

*****

Added cm.update_keys() function to update bibmanager config.
Refactored bm.init() to truly reset database, and to querry when
to reset database and config.

*****

Added database and config mutually exclusive options to init command
allowing to reset only the database or the config file.
Updated argparse and sphinx docs accordingly.

*****

Renamed init command-line command to reset.

*****

Updated u.ROOT constant to point to the root of the package.

*****

Ensured bm.init() always update the examples folder.
Removed obsolete bm.loadfile2().

*****

Added bm.init() call after python setup.py install/develop calls.

*****
